<resources>
    <string name="app_name">My Training</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="programs">Programs</string>
    <string name="sessions">Sessions</string>
    <string name="history">History</string>

    <string name="exit_confirm">"Are you sure to exit app?"</string>
    <string name="yes">yes</string>
    <string name="no">No</string>

    <string name="empty_program_list">There is no current programs</string>

    <string name="program">Program: </string>
    <string name="date">Date: </string>
    <string name="trainer">Trainer: </string>
    <string name="trainee">Trainee: </string>
    <string name="main_goal">Main goal: </string>
    <string name="pro_goal">Pro goal: </string>
    <string name="restrains">Restrains: </string>

    <string name="order">order: </string>
    <string name="exercise"> exercise: </string>
    <string name="reps">reps: </string>
    <string name="sets">sets: </string>
    <string name="tempo">tempo: </string>
    <string name="rest">rest: </string>
    <string name="import_json">import</string>
    <string name="create">create new </string>

</resources>
